[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.16.1"
rayon = "1.10.0"
regex = "1.11.1"

[profile.release]
strip = true
lto = "fat"
opt-level = "s"
codegen-units = 1
panic = "abort"

[lints.rust]
unsafe_code = "forbid"
dead_code = { level = "allow", priority = 0 }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
